configuration/livebook/livebook-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: livebook
  name: livebook-lb
  namespace: livebook
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: livebook
