configuration/livebook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: livebook
  namespace: livebook
  annotations:
    # Traefik: secure, plz.
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # Ask cert-manager to issue a TLS certificate.
    cert-manager.io/cluster-issuer: k3s-ca-cluster-issuer
spec:
  tls:
  - hosts:
      - livebook.k3s.kippel.de
    secretName: livebook-tls
  rules:
  - host: livebook.k3s.kippel.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: livebook
            port:
              number: 8080
